[DSTEW-1396] - Added a new optional field assessed_total_amount to the … (#296)
…submission details response returned by GET /api/v1/submissions/{id} -
updates services, AssessmentRepository and tests

## What

[Link to story](https://dsdmoj.atlassian.net/browse/DSTEW-XXX)

What was changed

Added assessed_total_amount to the submission response via open-api spec
Added AssessmentRepository#getAssessedTotalAmount(UUID submissionId)
Added AssessmentService#getAssessedTotalAmount(UUID submissionId)
Updated SubmissionService to populate the new field
Added JavaDoc
Added unit tests
Added repository integration tests
Updated consumer contract / Pact coverage for the null case

Why
To expose the sum of the latest assessed totals per claim at submission
level, while preserving the important distinction between:

null = no assessments exist
0 = assessments exist, but total zero

## Checklist

Before you ask people to review this PR please ensure the following and
mark as complete when done:

- [x] Tests should be passing: `./gradlew test`
- [x] Github should not be reporting conflicts; you should have recently
run `git rebase main`.
- [x] Avoid mixing whitespace changes with code changes in the same
commit. These make diffs harder to read and conflicts more likely.
- [x] You should have looked at the diff against main and ensured that
nothing unexpected is included in your changes.
- [x] You should have checked that the commit messages say why the
change was made.
- [ ] If applicable, you have executed the end-to-end (E2E) tests using
the
[bulk-submission-and-fee-scheme-tests-](https://github.com/ministryofjustice/bulk-submission-and-fee-scheme-tests-)
repository and confirmed they pass.

---------

Co-authored-by: Phil Payne <126681069+PhilDigitalJustice@users.noreply.github.com>